This is my commit message

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,8 @@ website:
       - eda.qmd
       - visualization.qmd
       - stat_summaries.qmd
+      - chatGPT.qmd
+      - additional.qmd
 
 format:
   html:
@@ -21,7 +23,7 @@ format:
     toc: true
     toc-depth: 4
     number-sections: true
-    number-depth: 3
+    number-depth: 7
     code-fold: true
     
 execute: 
